Configure Activity, Move Activity, and StelaClient Class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ConfigureActivity" />
+        <activity android:name=".MoveActivity"></activity>
     </application>
 
 </manifest>
