--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.adrian.stelaapplication">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:debuggable="true"
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode">
         <activity android:name=".MainActivity">
@@ -23,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ConfigureActivity" />
-        <activity android:name=".MoveActivity"></activity>
+        <activity android:name=".MoveActivity" />
+        <activity android:name=".MoveContActivity"></activity>
     </application>
 
 </manifest>
