--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".ConfigureActivity" />
         <activity android:name=".MoveActivity" />
-        <activity android:name=".MoveContActivity"></activity>
+        <activity android:name=".MoveContActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
